Last Feature Added -user cart and products can be ordered.

--- a/app/src/main/res/layout/activity_product_add_section.xml
+++ b/app/src/main/res/layout/activity_product_add_section.xml
@@ -54,26 +54,26 @@
                 android:layout_alignEnd="@id/image_Slider"
                 android:layout_marginEnd="10dp"
                 />
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/add_images_btn"
-                android:elevation="5dp"
                 android:layout_width="300dp"
-                app:backgroundTint="#CBE6FD"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/image_Slider"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="70dp"
+                android:background="@drawable/btn_bg_blue"
+                android:backgroundTint="#82B1FF"
+                android:elevation="5dp"
+                android:gravity="center"
+                android:text="Select images"
                 android:textColor="#4964FB"
                 android:textSize="17sp"
                 android:textStyle="bold"
+                app:backgroundTint="#CBE6FD"
                 app:icon="@drawable/ic_add_photo_icon_24"
                 app:iconGravity="textStart"
-                app:iconTint="#4964FB"
-                android:gravity="center"
-                android:backgroundTint="#82B1FF"
-                android:background="@drawable/btn_bg_blue"
-                android:text="Select images"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/image_Slider"
-                android:layout_marginTop="70dp"
-                android:layout_centerHorizontal="true"
-                />
+                app:iconTint="#4964FB" />
             <EditText
                 android:inputType="text"
                 android:textIsSelectable="true"
@@ -92,36 +92,36 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/add_images_btn"
                 />
+
             <com.skydoves.powerspinner.PowerSpinnerView
                 android:id="@+id/category_dropdownList"
-                android:layout_below="@+id/add_p_name"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/add_p_name"
+                android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/btn_bg_blue"
                 android:backgroundTint="#41FF6D00"
-                android:textSize="17sp"
-                android:hint="Choose category"
                 android:gravity="center"
-                app:spinner_popup_height="200dp"
-                app:spinner_popup_width="300dp"
-                android:textStyle="bold"
+                android:hint="Choose category"
+                android:padding="12dp"
                 android:textColor="@color/black"
+                android:textColorHint="#FF6D00"
+                android:textSize="17sp"
+                android:textStyle="bold"
                 app:spinner_arrow_animate_duration="200"
                 app:spinner_arrow_gravity="start"
-                android:layout_centerHorizontal="true"
                 app:spinner_divider_color="#536DFE"
-                app:spinner_divider_size="0.4dp"
-                android:padding="12dp"
-
-                android:textColorHint="#FF6D00"
                 app:spinner_divider_show="false"
-                app:spinner_popup_focusable="true"
-                app:spinner_popup_background="@color/white"
-                app:spinner_popup_animation="dropdown"
+                app:spinner_divider_size="0.4dp"
 
+                app:spinner_popup_animation="dropdown"
+                app:spinner_popup_background="@color/white"
                 app:spinner_popup_elevation="14dp"
-                />
+                app:spinner_popup_focusable="true"
+                app:spinner_popup_height="200dp"
+
+                app:spinner_popup_width="300dp" />
             <EditText
                 android:id="@+id/add_p_price"
                 android:inputType="number"
