--- a/app/src/main/res/layout/welcome_email_notify.xml
+++ b/app/src/main/res/layout/welcome_email_notify.xml
@@ -7,71 +7,72 @@
     >
 
     <RelativeLayout
-        android:background="@drawable/welcome_email_bg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="40dp"
-        android:layout_margin="20dp"
         android:layout_centerInParent="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/welcome_email_bg"
+        android:gravity="center"
         android:orientation="vertical"
-        >
+        android:padding="40dp">
 
         <TextView
-            android:layout_width="wrap_content"
             android:id="@+id/welcome_email_text1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:textAlignment="center"
             android:text="Hello   there ,"
-            android:textSize="30sp"
+            android:textAlignment="center"
             android:textColor="#0099ff"
+            android:textSize="30sp"
             android:textStyle="bold"
 
             />
 
 
         <TextView
-            android:layout_width="wrap_content"
             android:id="@+id/welcome_email_text2"
-            android:layout_below="@id/welcome_email_text1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/welcome_email_text1"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
+            android:text="Hello   there ,"
             android:textAlignment="viewStart"
             android:textColor="@color/black"
-            android:text="Hello   there ,"
-            android:textSize="17sp"
-            />
-      <Button
-          android:id="@+id/welcome_email_CHECKOUT"
-          android:layout_width="130dp"
-          android:layout_height="wrap_content"
-          android:background="@drawable/social_media_btn"
-          android:text="Check out"
-          android:elevation="20dp"
-          android:textStyle="bold"
-          android:textAlignment="center"
-          android:layout_marginTop="30dp"
-          android:layout_centerHorizontal="true"
-          android:layout_below="@id/welcome_email_text2"
-          />
+            android:textSize="17sp" />
+
+        <Button
+            android:id="@+id/welcome_email_CHECKOUT"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/welcome_email_text2"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/social_media_btn"
+            android:elevation="20dp"
+            android:text="Check out"
+            android:textAlignment="center"
+            android:textStyle="bold" />
+
         <Button
             android:id="@+id/welcome_email_CANCEL"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/social_media_btn"
-            android:text="cancel"
-            android:layout_marginBottom="10dp"
-            android:textColor="#0099ff"
-            android:elevation="20dp"
-            app:backgroundTint="@color/white"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:layout_marginTop="18dp"
-            android:layout_centerHorizontal="true"
             android:layout_below="@id/welcome_email_CHECKOUT"
-            />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="18dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/social_media_btn"
+            android:elevation="20dp"
+            android:text="cancel"
+            android:textAlignment="center"
+            android:textColor="#0099ff"
+            android:textStyle="bold"
+            app:backgroundTint="@color/white" />
     </RelativeLayout>
 
 </RelativeLayout>
